<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseActivity"
    android:background="@color/app_background_black"
    >


    <ImageButton
        android:id="@+id/backgroundImage"
        android:contentDescription="@string/purple_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/purple_rectangle"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="-9dp"
        android:background="@color/app_background_black"/>

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="75dp"
        android:layout_height="78dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/schedu_logo"
        app:layout_constraintStart_margin="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_margin="18dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/schedu_logo" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="48dp"
        android:text="@string/chedu"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_margin="173dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_margin="38dp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>