<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCategoryActivity"
    android:background="@color/app_background_black">

    <TextView
        android:id="@+id/txtSelectCategory"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="100dp"
        android:text="@string/create_category"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewMan"
        android:layout_width="42dp"
        android:layout_height="119dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/person_standing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/category_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddCategoryPhoto"
        android:layout_width="206dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="324dp"
        android:drawableEnd="@drawable/icon_gallery"
        android:enabled="false"
        android:text="@string/add_category_photo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCategoryName"
        android:layout_width="363dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:background="#d9d9d9"
        android:hint="@string/category_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateCategory"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="4dp"
        android:text="@string/create"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgCategoryImage"
        android:layout_width="213dp"
        android:layout_height="163dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="80dp"
        android:background="@color/white"
        android:contentDescription="Category Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_gallery" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="411dp"
        android:layout_height="661dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/app_background_black"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </LinearLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/scedu_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>