<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewCreateProject"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_black"
    tools:context=".CreateProjects">

    <TextView
        android:id="@+id/txtSelectCategory"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="80dp"
        android:text="Create a Project"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <ImageView
        android:id="@+id/imageViewMan"
        android:layout_width="42dp"
        android:layout_height="119dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/person_standing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="381dp"
        android:layout_height="234dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textProjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/project_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtProjectName"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:hint="@string/project_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/category_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtCategoryName"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:hint="@string/category_name" />

            <TextView
                android:id="@+id/textStartDate"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/start_date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtStartDate"
                android:layout_width="239dp"
                android:layout_height="55dp"
                android:layout_gravity="left"
                android:background="#d9d9d9"
                android:drawableEnd="@drawable/icon_calendar"
                android:hint="dd-MM-yyyy"
                android:inputType="date" />

            <TextView
                android:id="@+id/textEndDate"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/end_date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtEndDate"
                android:layout_width="245dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:background="#d9d9d9"
                android:drawableEnd="@drawable/icon_calendar"
                android:hint="dd-MM-yyyy"
                android:inputType="date" />

            <TextView
                android:id="@+id/textHoursRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/hours_required"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtHoursRequired"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:drawableEnd="@drawable/icon_clock"
                android:hint="HH:mm"
                android:textSize="20sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateProject"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginStart="260dp"
        android:layout_marginBottom="16dp"
        android:text="Create"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddProjectPhoto"
        android:layout_width="206dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="184dp"
        android:drawableEnd="@drawable/icon_gallery"
        android:text="Add Project Photo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="409dp"
        android:layout_height="658dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/app_background_black"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </LinearLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/scedu_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>